<resources>
    <string name="app_name">UniTripS</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="title_username">Username</string>
    <string name="title_password">Password</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_sign_up">Sign in</string>

    <!-- Strings related to login -->
    <string name="action_register">Create account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Invalid email address!</string>
    <string name="error_invalid_password">Invalid password! Password should be at least 6 characters.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="confirmedPassword">Confirm Password</string>
    <string name="title_email">Email</string>
    <string name="createAccount">Create UniTripS \n account</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_setting">setting</string>

    <string name="confirmPassword_error">Password and confirm password do not match!</string>
    <string name="sign_fail_message">Authentication failed. Please double check your login detail.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transport_setting">Transport Setting</string>
    <string name="import_calendar">Add calendar</string>
    <string name="import_description">From UTS myTimetable</string>
    <string name="prompt_StudentId">Student ID </string>
    <string name="prompt_password">Password</string>
    <string name="action_Import">Import</string>
    <string name="action_log_out">Logout</string>
    <string name="action_Sign_in">Sign in</string>
    <string name="action_Sign_up">Sign up</string>
    <string name="logout_warning">Are you sure you want to logout?</string>
    <string name="action_cancel">Cancel</string>
    <string name="existEmailError">You input email address has been used. Please try again!</string>
    <string name="fail_connection">Fail to connect the server! Please check your Internet connection!</string>
    <string name="no_response">server not response! Please try again!</string>

</resources>
