<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. [ Zexin Zhong ]
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SettingFragment"
    android:orientation="vertical"
    android:tag="settingFragment"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="30dp"
        android:id="@+id/transportSetting_textView"
        android:paddingRight="30dp"
        android:drawableLeft="@drawable/transport_setting_icon"
        android:textSize="25dp"
        android:gravity="center_vertical"
        android:text="@string/transport_setting" />
    <View
        android:layout_width="match_parent"
        android:layout_margin="2dp"
        android:layout_height="1.5dp"
        android:background="@color/black_overlay"
        android:id="@+id/transport_underline_view"
        android:layout_below="@+id/transportSetting_textView"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:id="@+id/addCalendar_textView"
        android:text="@string/import_calendar"
        android:drawableLeft="@drawable/calendar_icon"
        android:layout_below="@+id/transport_underline_view"
        android:textSize="25dp"
        android:gravity="center_vertical"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/black_overlay"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/addCalendar_textView"/>

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="115dp"
        android:background="@drawable/sign_up_btn_selector"
        android:padding="10dp"
        android:text="@string/action_log_out"
        android:textAllCaps="false"
        android:textColor="@color/textColorWhite"
        android:textSize="20dp"
        android:textStyle="bold" />


</RelativeLayout>